# RGBA_msc

./: .gitignore  CMakeLists.txt  README
include/: RGBA.h
tests/: RGBATests.cpp
